# grainLearning

./: .bumpversion.cfg  .env  .gitignore  .prospector.yml  .readthedocs.yaml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GetNetworkData.py  LICENSE  README.dev.md  README.md  evaluate_model.py  example_sweep.yaml  models.py  paper.bib  paper.md  parse_data.py  predict.py  preprocessing.py  project_setup.md  pyproject.toml  rnn_luisa.py  simple_rnn.py  sonar-project.properties  train.py  windows.py
.github/workflows/: Linter.yml  build.yml  draft-pdf.yml  release.yml  sonarcloud.yml
docs/source/: api.rst  bayesian_filtering.rst  conf.py  dynamic_systems.rst  examples.rst  how_to_contribute.rst  index.rst  inference.rst  installation.rst  introduction.rst  iterative_bayesian_filter.rst  models.rst  rnn.rst  sampling.rst  tutorials.rst
grainlearning/: __init__.py  bayesian_calibration.py  calibrationtoolbox.py  dynamic_systems.py  gaussianmixturemodel.py  grainlearning.py  inference.py  iterative_bayesian_filter.py  iterativebayesianfilter.py  models.py  sampling.py  sequentialmontecarlo.py  tools.py
grainlearning/coarse_graining/: CG.py  __init__.py  checks.py  plotting.py
grainlearning/rnn/: README.md  __init__.py  evaluate_model.py  models.py  predict.py  preprocessing.py  preprocessor.py  train.py  windows.py
grainlearning/rnn/data_parsing/: parse_data_YADE.py  triaxial_YADE.py
grainlearning/rnn/data_processing/: parse_data_YADE.py
grainlearning/rnn/sweep/: example_sweep.yaml
not_sequences/: GetNetworkData.py  graph_explore.py  rnn_luisa.py
package/: pyproject.toml  requirements.txt  set_env.sh
package/docs/: requirements.txt
package/docs/source/: api.rst  conf.py  index.rst  requirements.txt
package/grainlearning/: __init__.py  calibrationtoolbox.py  gaussianmixturemodel.py  iterativebayesianfilter.py  models.py  observations.py  parameters.py  sequentialmontecarlo.py
package/prototype/: 14sep_lenreg .py  14sep_lenreg.py  1sep_lenreg.py
package/tests/unit/: test_guassianmixturemodel.py  test_iterativebayesianfilter.py  test_models.py  test_observations.py  test_parameters.py  test_sequentialmontecarlo.py
rnn/data_processing/: data_correlation.py
rnn/trained_models/simple_rnn_All_All/: saved_model.pb
scripts_tools/platform_shells/aws/: yadeAWS.sh
scripts_tools/platform_shells/rcg/: yadeRCG.sh
sequences/: predict.py
sequences/data_processing/: parse_data.py
sequences_root/: CITATION.cff  run_sweep.sh  setup.cfg
tests/integration/: 14sep_lenreg.py  test_14sep_lenreg.py  test_gmm.py  test_lenreg.py  test_lenreg_IO.py  test_lenreg_IO_load.py  test_linear_regression.py  test_linreg_IO.py  test_smc.py  test_smc_mse.py
tests/unit/: conftest.py  test_bayesian_calibration.py  test_dynamic_systems.py  test_gaussianmixturemodel.py  test_guassianmixturemodel.py  test_inference.py  test_iterative_bayesian_filter.py  test_iterativebayesianfilter.py  test_models.py  test_rnn_model.py  test_rnn_preprocessing.py  test_rnn_preprocessor.py  test_sampling.py  test_sequentialmontecarlo.py
trained_models/simple_rnn_All_All/: keras_metadata.pb
trained_models/simple_rnn_All_All/variables/: variables.data-00000-of-00001
tutorials/data_driven/LSTM/: hyperbola_calibration.py  hyperbola_calibration_lstm.py  hyperbola_calibration_mixed.py  hyperbola_calibration_mixed_hypertuning.py  norsand_triax_calibration_mixed.py  test_rnn.py  train_predict_rnn.py  train_predict_rnn_hypertuning.py  train_rnn.py  train_rnn_hypertuning.py  triax_calibration_load_and_run_mixed.py  triax_calibration_load_and_run_mixed_4params.py  triax_calibration_mixed.py
tutorials/linear_regression/: LinearModel.py  linear_reg_one_iteration.py  linear_reg_solve.py  linear_regression_solve.py  python_lenreg.py  python_linear_regression_solve.py
tutorials/oedo_compression/: oedo_load_and_resample.py
tutorials/physics_based/1D_backward_erosion_piping/: 1dBEP_calibration.py
tutorials/physics_based/2D_dike_stability/: 2D_dike.py  2D_dike_model_inference.py
tutorials/rnn/: predict.ipynb  rnn_calibration_GL.ipynb  train_rnn.ipynb
(+81 files in other folders)
