[tool.poetry]
name = "GrainLearning"
version = "2.0.1"
description = ""
authors = ["Hongyang Cheng <h.cheng@utwente.nl>",
"Luisa Orozco <l.orozco@esciencecenter.nl>","Retief Lubbe <r.lubbe@utwente.nl>"]
readme = "README.md"
keywords = ["DEM", "Bayesian inference"]


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.2"
scipy = "^1.9.1"
scikit-learn = "^1.1.3"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"
sphinx-autodoc-typehints = "^1.19.2"

[tool.poetry.group.visual.dependencies]
matplotlib = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
matplotlib = "^3.6.0"
prospector = {version = "^1.7.6", extras = ["with_pyroma"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


packages = [
    { include = "grainlearning"}
]
