[tool.poetry]
name = "GrainLearning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.2"
scipy = "^1.9.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"
sphinx-autodoc-typehints = "^1.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
