[metadata]
author = Netherlands eScience Center
description = Predict macroscopic observables from loading sequence.
long_description = file: README.md
long_description_content_type = text/markdown
name = sequences
url = https://github.com/GrainLearning/sequences
version = 0.1


[options]
zip_safe = False
include_package_data = True
packages = 
install_requires = 
    numpy
    pandas
    h5py
    matplotlib
    plotly
    wandb
    tensorflow

